# robocon2022_essentials

./: .gitmodules  LICENSE  README.md
robocon2022_essentials/: CMakeLists.txt  package.xml
robocon2022_essentials_control/: CMakeLists.txt  package.xml
robocon2022_essentials_control/launch/: controller.launch  master.launch  pid_debug.launch  slave.launch  web.launch
robocon2022_essentials_controller/: CMakeLists.txt  package.xml
robocon2022_essentials_controller/src/: controller.cpp  emergency.cpp
robocon2022_essentials_detection/: CMakeLists.txt  README.md  package.xml
robocon2022_essentials_detection/src/: user_action_converter.cpp
robocon2022_essentials_msgs/: CMakeLists.txt  package.xml
robocon2022_essentials_msgs/msg/: Controller.msg  EmeregencyStop.msg  Gain.msg  PIDGain.msg  UserAction.msg  Vector4.msg  Wheel4.msg
robocon2022_essentials_serial/: CMakeLists.txt  package.xml
robocon2022_essentials_serial/example/: publish_debug.cpp  publish_gain.cpp
robocon2022_essentials_serial/src/: Controller.hpp  DebugMessage.h  Gesture.h  MessageStructure.hpp  MovementFeedback.hpp  PIDGain.hpp  ThrowGain.h  serial.cpp
robocon2022_essentials_visualizer/: CMakeLists.txt  package.xml
robocon2022_essentials_visualizer/src/: controller_visualizer.cpp  gain_visualizer.cpp  panel_visualizer.cpp  pid_debug.cpp  visualizer.cpp
robocon2022_essentials_visualizer/www/: debug_controller.html  visualizer.html
