<?xml version="1.0"?>
<package format="2">
  <name>robocon2022_essentials</name>
  <version>0.0.0</version>
  <description>The robocon2022_essentials package</description>

  <maintainer email="mechatech.tnctrobo@gmail.com">TNCT-Mechatech</maintainer>
  <author email="testusuke@gmail.com">testusuke</author>

  <license>MIT</license>

  <url type="repository">https://github.com/TNCT-Mechatech/robocon2022_essentials</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robocon2022_essentials_msg</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>
</package>
