<?xml version="1.0"?>
<package format="2">
  <name>robocon2022_essentials_serial</name>
  <version>0.0.0</version>
  <description>The robocon2022_essentials_serial package</description>

  <maintainer email="mechatech.tnctrobo@gmail.com">TNCT-Mechatech</maintainer>
  <author email="testusuke@gmail.com">testusuke</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robocon2022_essentials_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>robocon2022_essentials_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robocon2022_essentials_msgs</exec_depend>


  <export>
  </export>
</package>
