<?xml version="1.0"?>
<package format="2">
  <name>robocon2022_essentials_visualizer</name>
  <version>0.0.0</version>
  <description>The robocon2022_essentials_visualizer package</description>

  <maintainer email="mechatech.tnctrobo@gmail.com">TNCT-Mechatech</maintainer>
  <author email="testusuke@gmail.com">testusuke</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robocon2022_essentials_msgs</build_depend>
  <build_depend>body_tracker_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>robocon2022_essentials_msgs</build_export_depend>
  <build_export_depend>body_tracker_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robocon2022_essentials_msgs</exec_depend>
  <exec_depend>body_tracker_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <export>
  </export>
</package>
